Resolve "Fix navbar not showing active link"

--- a/app/components/elements/NavBar/navbar.module.css
+++ b/app/components/elements/NavBar/navbar.module.css
@@ -2,6 +2,7 @@
   min-width: 130px;
   display: flex;
   cursor: pointer;
+  padding-top: 20px;
 }
 .nav_item {
   color: #fff;
